--- a/hha507_wk1_assignment.ipynb
+++ b/hha507_wk1_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQXYbZd8XsnkVEBNfSTeJZ",
+      "authorship_tag": "ABX9TyP/XgV6K+WGDXeyCQLYIJNr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2564,6 +2564,27 @@
           "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## JSON Datasets"
+      ],
+      "metadata": {
+        "id": "EChcbqk89qUn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "import requests"
+      ],
+      "metadata": {
+        "id": "i6jIltRF8R7x"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
